@@ -2,8 +2,10 @@ package Solucionadores;
 
 import Entidad.Procesador;
 import Entidad.Tarea;
+import org.example.Servicios;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Greedy implements SolucionadorAbstracto {
@@ -11,105 +13,95 @@ public class Greedy implements SolucionadorAbstracto {
     List<Tarea> tareas;
     private boolean esPosibleSolucionar;
     private int countCandidatos;
+    private int countCriticas;
+    private int tiempoFinal;
 
-    public Greedy(List<Procesador> procesadores, List<Tarea> tareas) {
-        this.procesadores = procesadores;
-        this.tareas = tareas;
+    public Greedy(Servicios servicios){
+        this.procesadores = servicios.getProcesadores();
+        this.tareas = servicios.getTareas();
+        this.countCriticas = servicios.countCriticas();
+        this.tiempoFinal = -1;
     }
 
-    //complejidad O(n*m) siendo n la cantidad de tareas y m la cantidad de procesadores
+    //complejidad O(n*(m log m)) siendo n la cantidad de tareas y m la cantidad de procesadores.
+    //Recorro todas las tareas una vez, y tengo que ordenar los procesadores una vez por cada tarea.
+    //El ordenamiento internamente usa una variacion timsort, cuya complejidad es O(n log n).
 
-    //La solucion consiste en:
-    //por cada tarea t
-        //obtener el procesador con menor tiempo de ejecucion
-            //si se puede agregar t a ese procesador
-                //se la agrega
-            //caso contrario
-                //se revisan los demas procesadores para ver si se puede en algun otro
-                    //si no se puede en ninguno
-                        //es que no hay solucion
+    //La idea es:
+    //Paso 1: ordenar las tareas en base a su tiempo de ejecucion (de mayor a menor).
+    //Paso 2: por cada una de las tareas, ordeno los procesadores en base a la suma del tiempo de ejecucion de sus tareas asignadas (de menor a mayor)
+    //Paso 3: por cada procesador, intento agregar la tarea. si puedo agregarla tarea, la agrego y repito desde el paso 2 con la siguiente tarea en la lista
+    //Paso 4: si no pude agregar mi tarea a ningun procesador, es que no hay solucion posible.
+    //si pude agregar todas las tareas, la solucion va a estar en la lista de procesadores
+
+    //En varias situaciones alcanza soluciones optimas, pero por ejemplo
     public void greedy(int tiempo) {
         if (!haySolucion())
             return;
 
+        //Paso 1 (ordenar tareas)
         int countTareas = refrezcar(tiempo);
 
         while (!tareas.isEmpty()) {
-            Tarea t = tareas.removeFirst();
+            Tarea t = tareas.remove(0);
+            //Pasos 2, 3 y 4
+            esPosibleSolucionar = seleccionar(t);
 
-            int indiceProcesador = getIndiceProcesadorMenosCargado();
-            Procesador p = procesadores.get(indiceProcesador);
-
-            if (!agregarTarea(t, p)){
-                esPosibleSolucionar = seleccionar(indiceProcesador, t);
-
-                if (!esPosibleSolucionar)
-                    return;
+            //si no hay solucion posible, corto la ejecucion
+            if (!esPosibleSolucionar){
+                setTiempoFinal();
+                return;
             }
         }
+
         esPosibleSolucionar = verificarSolucion(countTareas);
+        setTiempoFinal();
     }
 
     private int refrezcar(int tiempo) {
         int countTareas = tareas.size();
         this.countCandidatos = 0;
         Procesador.setTiempo(tiempo);
+        tareas.sort(Collections.reverseOrder());
         return countTareas;
     }
 
-    private boolean agregarTarea(Tarea t, Procesador p) {
-        if (p.agregarTarea(t)){
-            countCandidatos++;
-            return true;
-        }
-
-        return false;
+    public int getTiempoFinal() {
+        return tiempoFinal;
     }
 
-    private int getIndiceProcesadorMenosCargado() {
-        int tiempoMenor = Integer.MAX_VALUE;
-        int indiceProcesador = 0;
+    private void setTiempoFinal() {
+        if (!esPosibleSolucionar){
+            tiempoFinal = -1;
+        } else {
+            int tiempoMayor = 0;
 
-        for (int i = 0; i < procesadores.size(); i++) {
-            if (procesadores.get(i).getTiempoEjecucionProcesador() < tiempoMenor) {
-                tiempoMenor = procesadores.get(i).getTiempoEjecucionProcesador();
-                indiceProcesador = i;
+            for (Procesador p : procesadores) {
+                int tiempoProcesador = p.getTiempoEjecucionProcesador();
+
+                if (tiempoProcesador > tiempoMayor)
+                    tiempoMayor = tiempoProcesador;
             }
-        }
 
-        return indiceProcesador;
+            tiempoFinal = tiempoMayor;
+        }
     }
 
-    private int getTiempoFinal() {
-        int tiempoMayor = 0;
+    //Ordeno procesadores
+    //Pruebo de agregar tarea a procesador
+    //Retorna verdadero si efectivamente se pudo agregar la tarea a un procesador
+    //Retorna falso si no se pudo: Eso significa que no hay solucion posible.
+    private boolean seleccionar(Tarea t) {
+        countCandidatos++;
 
-        for (Procesador p : procesadores) {
-            int tiempoProcesador = p.getTiempoEjecucionProcesador();
-
-            if (tiempoProcesador > tiempoMayor)
-                tiempoMayor = tiempoProcesador;
-        }
-
-        return tiempoMayor;
-    }
-
-    private boolean seleccionar(int indiceProcesador, Tarea t) {
-        //iterar por el resto de los procesadores
-            //si en alguna instancia se pudo agregar,
-                //retornar true
-            //si no se pudo
-                //retornar false
-
-        int size = procesadores.size();
-        for (int i = 0; i < size; i++) {
-            int currentIndex = (indiceProcesador + i) % size;
-            Procesador procesadorActual = procesadores.get(currentIndex);
-
-            if (agregarTarea(t, procesadorActual)){
+        //Paso 2 (ordenar procesadores)
+        Collections.sort(procesadores);
+        //Paso 3 (intentar agregar)
+        for (Procesador p : procesadores)
+            if (p.agregarTarea(t))
                 return true;
-            }
-        }
 
+        //Paso 4 (Si no puedo agregar, retornar falso.)
         return false;
     }
 
@@ -125,7 +117,7 @@ public class Greedy implements SolucionadorAbstracto {
 
     @Override
     public boolean haySolucion() {
-        return !((Tarea.getCountCriticas() / 2) > procesadores.size());
+        return !((this.countCriticas / 2) > procesadores.size());
     }
 
     public ArrayList<Procesador> getSolucion() {
@@ -140,7 +132,6 @@ public class Greedy implements SolucionadorAbstracto {
 
         for (Procesador p : procesadores)
             countTareasAsignadas += p.getCountTareasAsignadas();
-
         return countTareasAsignadas == countTareas;
     }
 
